# dist-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: erf.rs  gamma.rs  lib.rs  math.rs  normal.rs  students_t.rs
