[package]
name = "distrs"
version = "0.2.1"
description = "PDF, CDF, and percent-point/quantile functions for the normal and Student’s t distributions"
repository = "https://github.com/ankane/dist-rust"
license = "Unlicense OR MIT"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { version = "0.2", optional = true }

[features]
no_std = ["libm"]
